--- a/Frames/backend/package.json
+++ b/Frames/backend/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "loader.js",
   "scripts": {
-    "dev":"nodemon",
-    "production":"pm2 start loader.js --name backend"
+    "dev": "nodemon",
+    "production": "pm2 start loader.js --name backend"
   },
   "author": "Darlan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-query-int": "^3.0.0",
+    "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.1",
     "mongoose-paginate": "^5.0.3",
